Made it so you need at least one enum case, also a bunch of other little bits and bobs